modified HTML pages and CSS

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 <body>
     <header>
-
+        <nav>
+            <a href="page6.html">About Us</a>
+        </nav>
     </header>
     <main>
         
