--- a/page2.html
+++ b/page2.html
@@ -9,6 +9,14 @@
   <title>Chillax</title>
 </head>
 <body>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="page6.html">About Us</a></li>
+        <li><a href="index.html">Home</a></li>
+      </ul>
+    </nav>
+  </header>
   <main>
   <div>
     <form>
