--- a/page6.html
+++ b/page6.html
@@ -9,6 +9,13 @@
   <title>Chillax</title>
 </head>
 <body>
-  
+  <header>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+      </ul>
+    </nav>
+  </header>
+  <h1>About Us</h1>
 </body>
 </html>
