added markdown with all video links and started JS

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
         </nav>
     </header>
     <main>
-        
+    <h1>Chillax</h1>
+    <h3>The meditation app</h3>
+    <h4>Take the time to do nothing and Chillax</h4>
     </main>
 </body>
 </html>
