began working on javascript functions

--- a/page2.html
+++ b/page2.html
@@ -26,10 +26,12 @@
             <label for="job">What do you do for a living?</label>
             <input type="text" name="userOccupation" id="job" required></br>
         </fieldset>
+        <button>Next</button>
     </form>
 </div>
-<button>Next</button>
+
 </main>
 <script src="js/app.js"></script>
+<script src="js/page2.js"></script>
 </body>
 </html>
