css/html starter

--- a/index.html
+++ b/index.html
@@ -6,18 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    
     <title>Chillax</title>
 </head>
 <body>
+    <div style="background-image: url(/img/meditation-sitdown.jpg);"></div>
     <header>
         <nav>
             <a href="page6.html">About Us</a>
         </nav>
     </header>
     <main>
-    <h1>Chillax</h1>
-    <h3>The meditation app</h3>
-    <h4>Take the time to do nothing and Chillax</h4>
+     <div class="card">
+        <h1>Chillax</h1>
+        <h3>The meditation app</h3>
+        <h4>Take the time to do nothing and Chillax</h4>
+    </div>
+    
     </main>
 </body>
 </html>
