Form Pages Event Listeners

--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
         <h3>The meditation app</h3>
         <h4>Take the time to do nothing and Chillax</h4>
     </div>
-    
+
+    <a href="page2.html">
+        <button>Begin</button>
+        </a>
+
     </main>
 </body>
 </html>
