--- a/page4.html
+++ b/page4.html
@@ -23,8 +23,13 @@
       jobDescription can be stressful at times. Take a moment out of your day to calm your mind and relax by starting out with this breathing exercise.
     </article>
     </div>
-    <button>Start Chillaxin'</button>
+
+    <a href="page5.html">
+      <button>Start Chillaxin'</button>
+      </a>
+    
   </main>
   <script src="js/app.js"></script>
+<script src="js/page4.js"></script>
 </body>
 </html>
