--- a/page5.html
+++ b/page5.html
@@ -23,6 +23,7 @@
       
     </div>
   </main>
-  <script src="js/page5.js"></script>
+  <script src="js/app.js"></script>
+<script src="js/page5.js"></script>
 </body>
 </html>
