CSS updates and completed title header

--- a/index.html
+++ b/index.html
@@ -7,14 +7,19 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kaisei+Opti&family=Merienda&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/3c45aedaa0.js" crossorigin="anonymous"></script>
+    
     <title>Chillax</title>
 </head>
 <body>
     <div style="background-image: url(/img/meditation-sitdown.jpg);"></div>
     <header>
-        <nav>
+        <!-- <nav>
             <a href="page6.html">About Us</a>
-        </nav>
+        </nav> -->
     </header>
     <main>
      <div class="card">
@@ -24,8 +29,8 @@
     </div>
 
     <a href="page2.html">
-        <button>Begin</button>
-        </a>
+    <div class="button"><p>Begin</p></div>
+    </a>
 
     </main>
 </body>
