--- a/page6.html
+++ b/page6.html
@@ -17,5 +17,8 @@
     </nav>
   </header>
   <h1>About Us</h1>
+
+  <h2>Jae Loney</h2>
+  <p>Jae is a software developer and project manager who loves solving problems, organizing teams and working with Javascript for both front-end and back-end applications. Jae enjoys learning and working with others and hopes to use their skills to bring websites to life with people who are working to change the world for the better. To relax Jae loves writing, baking, and exploring NYC.</p>
 </body>
 </html>
