added about me and headshot

--- a/page6.html
+++ b/page6.html
@@ -20,5 +20,7 @@
 
   <h2>Jae Loney</h2>
   <p>Jae is a software developer and project manager who loves solving problems, organizing teams and working with Javascript for both front-end and back-end applications. Jae enjoys learning and working with others and hopes to use their skills to bring websites to life with people who are working to change the world for the better. To relax Jae loves writing, baking, and exploring NYC.</p>
+  <h2>Brian Tarte</h2>
+  <p>Hi! My name is Brian and I'm a supply chain professional who moonlights as a starving Software Developer. I enjoy working on teams and with Javascript to build front and back-end applications. So far, I thoroughly enjoy learning software languages and my dream is to bring my skillset to an organization that places an emphasis on environmental sustainability. To relax, I enjoy hitting the links, bladesmithing, and woodworking. </p>
 </body>
 </html>
