Added headshot and about me

--- a/page6.html
+++ b/page6.html
@@ -20,5 +20,9 @@
 
   <h2>Jae Loney</h2>
   <p>Jae is a software developer and project manager who loves solving problems, organizing teams and working with Javascript for both front-end and back-end applications. Jae enjoys learning and working with others and hopes to use their skills to bring websites to life with people who are working to change the world for the better. To relax Jae loves writing, baking, and exploring NYC.</p>
+
+  <h2>Christine Lora</h2>
+  <p>My name is Christine and I currently work in business operations at Zillow, but aspiring to pivot my career as a software developer. I love collaborating with others, learning anything and everything possible and challenges. I believe software developing covers all those aspects. To relax, I love drinking hot tea while reading a book, doing guided meditations or taking a candle lit bubble bath. </p>
+  
 </body>
 </html>
