--- a/page6.html
+++ b/page6.html
@@ -20,5 +20,7 @@
 
   <h2>Jae Loney</h2>
   <p>Jae is a software developer and project manager who loves solving problems, organizing teams and working with Javascript for both front-end and back-end applications. Jae enjoys learning and working with others and hopes to use their skills to bring websites to life with people who are working to change the world for the better. To relax Jae loves writing, baking, and exploring NYC.</p>
+  <h2>Osborn Del Angel</h2>
+  <p>Hi , my name is Osborn Del Angel. My background is in manufacturing and I decided to switch careers because I wanted a more fulfilling career. My daughter and my wife are also both driving factors and why I chose to be a software developer. Software Development is something that I'm ready to tackle and build my skills for the rest of my life. What I do to relax is just turn on some tunes and just listen.</p>
 </body>
 </html>
