added gif animation asset

--- a/page4.html
+++ b/page4.html
@@ -22,6 +22,7 @@
     <article>
       jobDescription can be stressful at times. Take a moment out of your day to calm your mind and relax by starting out with this breathing exercise.
     </article>
+    <img src="/img/424-breathing.gif"/>
     </div>
 
     <a href="page5.html">
