added second CSS page, as well as credit to link for gif image

--- a/page3.html
+++ b/page3.html
@@ -6,6 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Kaisei+Opti&family=Merienda&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/3c45aedaa0.js" crossorigin="anonymous"></script>
   <title>Chillax</title>
 </head>
 <body>
@@ -35,8 +39,8 @@
                 <input type="radio" name="relaxTime" value="15"required>
                 15 minutes
               </label></br>
-              <label for="relax">What do you like to Chillax with?</label>
-              <input type="text" name="relaxObject" id="relax" required></br>
+              <label for="relax">What is something that helps you relax?</label>
+              <input type="text" name="relaxObject" id="relax" placeholder="Book? Tea? Etc?" required></br>
               <p>What do you want to meditate to?</p>
               <label>
                 <input type="radio" name="relaxType" value="Nature"required>
