Greeting the user with their information on pages 3-5. Local storag working is so greatgit add .!

--- a/page4.html
+++ b/page4.html
@@ -23,8 +23,10 @@
   </header>
   <main>
     <div>
+    <article id=jobgreeting></article>
+    <article id=thinggreeting></article>
     <article>
-      jobDescription can be stressful at times. Take a moment out of your day to calm your mind and relax by starting out with this breathing exercise.
+      Let's get started with this breathing exercise.
     </article>
     <img src="/img/424-breathing.gif"/>
     </div>
