Added text from wireframe to pages 2 and 3

--- a/page3.html
+++ b/page3.html
@@ -24,6 +24,7 @@
   <main>
     <h1 id="greeting"></h1>
     <div>
+      Let's learn a little about how you want to Chillax...
       <form>
           <fieldset>
             <p>How long do you want to Chillax for?</p>
