modified css to add nav background color and begin styling page 4

--- a/page2.html
+++ b/page2.html
@@ -43,10 +43,9 @@
 </div>
 </main>
 <footer>
-<div class="quotation">"</div>
-Calmness of mind is one of
-the beautiful jewels of
-wisdom<br>
+<div class="quotation"><blockquote>"Calmness of mind is one of
+    the beautiful jewels of
+    wisdom"</blockquote></div>
 </footer>
 
 <script src="js/app.js"></script>
