--- a/page4.html
+++ b/page4.html
@@ -22,18 +22,19 @@
     </nav>
   </header>
   <main>
-    <div>
+    <div id="breathe">
     <article id=jobgreeting></article>
     <article id=thinggreeting></article>
     <article>
-      Let's get started with this breathing exercise.
+      Let's get started with this breathing exercise...
     </article>
     <img src="/img/424-breathing.gif"/>
+    <a href="page5.html">
+      <button id="chillbutton">Start Chillaxin'</button>
+      </a>
     </div>
 
-    <a href="page5.html">
-      <button>Start Chillaxin'</button>
-      </a>
+    
     
   </main>
   <script src="js/app.js"></script>
