--- a/page2.html
+++ b/page2.html
@@ -27,7 +27,7 @@
   </header>
   <main>
   <div>
-    Before we get started, tell us a little about yourself...
+    <h2>Before we get started, tell us a little about yourself...</h2>
     <form>
         <fieldset>
             <label for="name">What's your name?</label>
@@ -44,10 +44,12 @@
 </div>
 </main>
 <footer>
-<div class="quotation"><blockquote>"Calmness of mind is one of
-    the beautiful jewels of
-    wisdom"</blockquote></div>
-</footer>
+  <div class="quotation">"</div>
+  Calmness of mind is one of
+  the beautiful jewels of
+  wisdom<br>
+  </footer>
+
 
 <script src="js/app.js"></script>
 <script src="js/page2.js"></script>
