--- a/page4.html
+++ b/page4.html
@@ -9,6 +9,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Kaisei+Opti&family=Merienda&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@700&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/3c45aedaa0.js" crossorigin="anonymous"></script>
   <title>Chillax</title>
 </head>
@@ -34,9 +37,11 @@
       </a>
     </div>
 
-    
-    
   </main>
+  <footer>
+    <div class="quotation">"</div>
+    QUOTE#3<br>
+    </footer>
   <script src="js/app.js"></script>
 <script src="js/page4.js"></script>
 </body>
