--- a/page5.html
+++ b/page5.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Kaisei+Opti&family=Merienda&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@700&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/3c45aedaa0.js" crossorigin="anonymous"></script>
   <title>Chillax</title>
 </head>
@@ -26,7 +27,13 @@
     <div id='chillaxVid'>
       
     </div>
+    <div id=playVideo></div>
   </main>
+  
+  <!-- <footer>
+    <div class="quotation">"</div>
+    QUOTE#4<br>
+    </footer> -->
   <script src="js/app.js"></script>
 <script src="js/page5.js"></script>
 </body>
