--- a/page5.html
+++ b/page5.html
@@ -30,11 +30,13 @@
     <div id=playVideo></div>
   </main>
   
-  <!-- <footer>
+  <script src="js/app.js"></script>
+  <script src="js/page5.js"></script>
+
+  <footer>
     <div class="quotation">"</div>
     QUOTE#4<br>
-    </footer> -->
-  <script src="js/app.js"></script>
-<script src="js/page5.js"></script>
+    </footer>
+  
 </body>
 </html>
