--- a/page6.html
+++ b/page6.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/style.css">
+  
   <link rel="stylesheet" href="css/about-me-stylesheet.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,6 +24,7 @@
       </ul>
     </nav>
   </header>
+  <main>
   <h1>About Us</h1>
   <div id="headshot"><img src="/img/JaeHeadshot.jpg" alt="Jae">
 
@@ -39,7 +40,9 @@
   <div id="headshot"><img src="/img/brianheadshot.jpeg" alt="brian">
   <div id="name"><h2>Brian Tarte</h2>
   <p>Hi! My name is Brian and I'm a supply chain professional who moonlights as a starving Software Developer. I enjoy working on teams and with Javascript to build front and back-end applications. So far, I thoroughly enjoy learning software languages and my dream is to bring my skillset to an organization that places an emphasis on environmental sustainability. To relax, I enjoy hitting the links, bladesmithing, and woodworking. </p></div></div>
+</main>
 
-
+  <footer></footer>
 </body>
+
 </html>
