--- a/page2.html
+++ b/page2.html
@@ -19,15 +19,14 @@
   <header>
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
         <li><a href="page6.html">About Us</a></li>
-        
+        <li><a href="index.html">Home</a></li>
       </ul>
     </nav>
   </header>
   <main>
   <div>
-    <h2>Before we get started, tell us a little about yourself...</h2>
+    Before we get started, tell us a little about yourself...
     <form>
         <fieldset>
             <label for="name">What's your name?</label>
@@ -44,12 +43,11 @@
 </div>
 </main>
 <footer>
-  <div class="quotation">"</div>
-  Calmness of mind is one of
-  the beautiful jewels of
-  wisdom<br>
-  </footer>
-
+<div class="quotation">"</div>
+Calmness of mind is one of
+the beautiful jewels of
+wisdom<br>
+</footer>
 
 <script src="js/app.js"></script>
 <script src="js/page2.js"></script>
