--- a/page3.html
+++ b/page3.html
@@ -67,7 +67,7 @@
   </main>
   <footer>
     <div class="quotation">"</div>
-    QUOTE#2<br>
+    QUOTE #2
     </footer>
   <script src="js/app.js"></script>
   <script src="js/page3.js"></script>
