Styling Changes - about me and CSS polishing

--- a/page3.html
+++ b/page3.html
@@ -61,13 +61,14 @@
           </fieldset>
 
           <div class="button2"><button>Next</button></div>
-      </form>        
+             
+        </form>        
 
   </div>
   </main>
   <footer>
-    <div class="quotation">"</div>
-    QUOTE#2<br>
+    <div class=quote>"</div>
+            Calmness of mind is one of the beautiful jewels of wisdom<br>
     </footer>
   <script src="js/app.js"></script>
   <script src="js/page3.js"></script>
