--- a/page6.html
+++ b/page6.html
@@ -29,12 +29,11 @@
     <div id="all">
       <div id="left">
         <div id="headshot">
-          <img src="/img/Jae-Headshot.jpg" alt="Jae">
-
+          <img src="/img/JaeHeadshot.jpg" alt="Jae">
           <div id="name">
             <h2>Jae Loney</h2>
           
-            Jae is a software developer and project manager who loves solving problems, organizing teams and working with Javascript for both front-end and back-end applications. Jae enjoys learning and working with others and hopes to use their skills to bring websites to life with people who are working to change the world for the better. To relax Jae loves writing, baking, and exploring NYC.
+            Jae is a software developer and project manager who loves learning, solving problems, and organizing teams. Jae enjoys working with Javascript in both front-end and back-end applications and hopes to use their skills to bring websites to life with people who are working to change the world for the better. To relax Jae loves writing, baking, and exploring NYC.
           </div>
         </div>
 
