--- a/page2.html
+++ b/page2.html
@@ -44,11 +44,9 @@
 </div>
 </main>
 <footer>
-  <div class="quotation">"</div>
-  Calmness of mind is one of
-  the beautiful jewels of
-  wisdom<br>
-  </footer>
+ <div class="quote">"</div>
+    Meditation is choosing not to engage in the drama of the mind but elevating the mind to its highest potential.<br> – Amit Ray<br>
+</footer>
 
 
 <script src="js/app.js"></script>
