--- a/page4.html
+++ b/page4.html
@@ -39,8 +39,8 @@
 
   </main>
   <footer>
-    <div class="quotation">"</div>
-    QUOTE#3<br>
+    <div class="quote">"</div>
+    Accept what you can't change, and change what you can.<br>
     </footer>
   <script src="js/app.js"></script>
 <script src="js/page4.js"></script>
