--- a/page3.html
+++ b/page3.html
@@ -7,12 +7,8 @@
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Kaisei+Opti&family=Merienda&display=swap" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@700&display=swap" rel="stylesheet">
-  <script src="https://kit.fontawesome.com/3c45aedaa0.js" crossorigin="anonymous"></script>
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Questrial&display=swap" rel="stylesheet">
   <title>Chillax</title>
 </head>
 <body>
@@ -60,7 +56,7 @@
               </label>
           </fieldset>
 
-          <div class="button2"><button>Next</button></div>
+          <div class="button2div"><button class="button"><span>Next</span></button></div>
       </form>        
 
   </div>
