--- a/page4.html
+++ b/page4.html
@@ -7,12 +7,8 @@
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Kaisei+Opti&family=Merienda&display=swap" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@700&display=swap" rel="stylesheet">
-  <script src="https://kit.fontawesome.com/3c45aedaa0.js" crossorigin="anonymous"></script>
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Questrial&display=swap" rel="stylesheet">
   <title>Chillax</title>
 </head>
 <body>
@@ -33,7 +29,7 @@
     </article>
     <img src="/img/424-breathing.gif"/>
     <a href="page5.html">
-      <button id="chillbutton">Start Chillaxin'</button>
+      <div class="button2div"><button class="buttonChill"><span>Start Chillaxin'</span></button></div>
       </a>
     </div>
 
