fixed image source

--- a/page4.html
+++ b/page4.html
@@ -27,7 +27,7 @@
     <article>
       Let's get started with this breathing exercise...
     </article>
-    <img src="/img/424-breathing.gif"/>
+    <img src="./img/424-breathing.gif"/>
     <a href="page5.html">
       <div class="button2div"><button class="buttonChill"><span>Start Chillaxin'</span></button></div>
       </a>
