--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Chillax</title>
 </head>
 <body>
-    <div style="background-image: url(./img/meditation-sitdown.jpg);"></div>
+    <div id="background-image"></div>
     <header>
        
     </header>
